<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainSearchActivity">

    <Button
            android:text="@string/search_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_date_label"
            android:layout_alignBaseline="@+id/search_date"
            android:onClick="onDateButtonClicked"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_date"
            android:inputType="date"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/search_date_label"/>

    <Button
            android:text="@string/search_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_time_label"
            android:layout_below="@+id/search_date_label"
            android:layout_alignBaseline="@+id/search_time"
            android:onClick="onTimeButtonClicked"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_time"
            android:inputType="time"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/search_time_label"
            android:layout_below="@+id/search_date"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_time"
            app:errorEnabled="true">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_location"
            android:inputType="number"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/search_location_label"
            android:layout_below="@+id/search_time"
            android:hint="@string/search_location"/>

</android.support.design.widget.TextInputLayout>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/search_button"
            android:id="@+id/search_button"
            android:onClick="onSearchButtonClicked"/>



</RelativeLayout>
