<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.brandeis.project.taper.app.ReservationFormActivity">

    <TextView
            android:id="@+id/form_Date_label"
            android:text="@string/search_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/form_date"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_date"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/form_Date_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:id="@+id/form_time_label"
            android:text="@string/search_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_Date_label"
            android:layout_alignBaseline="@+id/form_time"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_time"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/form_time_label"
            android:layout_below="@+id/form_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="25dp"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/form_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_time"
            app:errorEnabled="true">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_name"
            android:inputType="text"
            android:layout_centerInParent="true"
            android:layout_below="@+id/form_time"
            android:hint="Full Name"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/form_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_name_input_layout"
            app:errorEnabled="true">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_email"
            android:inputType="textEmailAddress"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/form_email_label"
            android:layout_below="@+id/form_name"
            android:hint="E-mail Addrress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/form_phone_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form_email_input_layout"
            app:errorEnabled="true">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_phone"
            android:inputType="phone"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/form_phone_label"
            android:layout_below="@+id/form_email"
            android:hint="Phone Number"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/confirm_button"
            android:id="@+id/confirm_button"
            android:onClick="onConfirmButtonClicked"/>


</RelativeLayout>
